--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Node.js dependencies
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 
 # AWS SAM build artifacts
 .aws-sam/
@@ -15,6 +17,9 @@ logs/
 .env.development
 .env.test
 .env.production
+frontend/.env
+backend/.env
+infrastructure/.env
 
 # IDE configuration files
 .vscode/
@@ -38,9 +43,12 @@ desktop.ini
 temp/
 *.tmp
 
-# Build artifacts (for frontend)
-dist/
-build/
+# Frontend build artifacts
+frontend/dist/
+frontend/build/
+
+# Infrastructure (Terraform)
+infrastructure/.terraform/
 
 # Coverage and test files
 coverage/
@@ -50,4 +58,3 @@ reports/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
