--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,4 +40,8 @@ jobs:
     - name: 🛠 Build & Validate with SAM
       run: |
         sam --version
-        sam validate -t ../infrastructure/template.yaml
+    - name: 🛠 Build & Validate with SAM
+      run: |
+        sam --version
+        sam validate -t ../infrastructure/template.yaml --region ap-south-1
+
